--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
   <string name="hello_world">Hello world!</string>
   <string name="action_settings">Settings</string>
   <string name="title_activity_maps">Map</string>
+  <string name="title_activity_sign_up">Sign Up</string>
+  <string name="username_hint">User Name</string>
+  <string name="password_hint">Password</string>
+  <string name="email_hint">email@server.com</string>
+  <string name="sign_up_btn_lbl">Sign Up</string>
+  <string name="title_activity_login">LoginActivity</string>
 </resources>
