--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
   <string name="password_cannot_be_empty">Password cannot be empty</string>
   <string name="email_cannot_be_empty">EMail cannot be empty</string>
   <string name="action_logout">Logout</string>
+  <string name="sign_up">Sign Up</string>
+  <string name="sign_in">Sign In</string>
 </resources>
