--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
   <string name="approved_stint">Approved</string>
   <string name="completed_stint">Completed</string>
   <string name="offerred_stint">Offered</string>
+  <string name="stints">Stints</string>
 </resources>
